# waterSim

./: .env  .env.copy  .gitignore  README.md  waterSim.sln
backend/: CMakeLists.txt
backend/Release/: CMakeCache.txt  Makefile  cmake_install.cmake  save_to_file  save_to_file_amd
backend/src/: float4_helper_functions.h  main.cpp  main.h  save_to_file.cpp  simulation_class.cpp  simulation_class.h
backend/src/simulation/: buffer_debug_funcs.hpp  float4_helper_functions.hpp  pdf.hpp  sim_setup_helper_functions.hpp  simulation_class.hpp
backend/src/socket/: communicator.hpp  sockets.cpp  sockets.h  sockets.hpp
backend/waterSim/: CMakeLists.txt
frontend/: Game1.cs  Program.cs  app.manifest  frontend.csproj
frontend/Content/: Content.mgcb
frontend/scripts/camera/: camera.cs
frontend/scripts/levels/: level.cs  main_networked.cs  read_pregenerated_file.cs  read_pregenerated_file_2d.cs  read_pregenerated_file_3d.cs  selector.cs
frontend/scripts/objects/: Arrow.cs  Object.cs  Sim.cs
frontend/scripts/sockets/: sockets.cs
